fixed line to appear behind mail images instead of in front using z-index

--- a/src/App.css
+++ b/src/App.css
@@ -73,7 +73,7 @@ p {
   padding: 30px;
   color: #fff;
   margin-top: 121px;
-  margin-bottom: 100px;
+  margin-bottom: 40px;
 }
 
 .demo-container:after {
@@ -134,6 +134,10 @@ p {
   cursor: pointer;
   -webkit-transition-duration: 0.4s; /* Safari */
   transition-duration: 0.4s;
+}
+
+.top-footer .footer-logo {
+  height: 25px;
 }
 
 .top-footer h3 {
