--- a/src/components/OurProgress/OurProgress.css
+++ b/src/components/OurProgress/OurProgress.css
@@ -10,11 +10,11 @@
 }
 
 .vertical-line {
-    right: 254px;
-    width: 3px;
-    height: 790px;
-    background-color: #0688FA;
     position: absolute;
+    width: 0px;
+    height: 844px;
+    right: 211px;
+    border: 2px solid #0688FA;
     z-index: 0;
 }
 
@@ -34,6 +34,7 @@
 
 .milestone-mail {
     margin: 10px;
+    z-index: 1;
 }
 
 .progress-list {
